Adjust the api urls and the documentation
